tabbar items refactored.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+a{
+    text-decoration: none;
+    color: inherit;
+}
 .muirtl-3tyok0-MuiButtonBase-root-MuiTab-root.Mui-selected {
     color: orange !important;
 }
