--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,14 +24,13 @@ a {
 }
 
 .muirtl-1olk2g7-MuiTabs-indicator {
-    background-color: orange !important;
+    background-color: transparent !important;
 }
 
 .MuiTab-root {
     min-height: 50px !important;
-    background-color: #555 !important;
-    margin: 5px 0 !important;
-    border-radius: 3px !important;
+    margin: 0 !important;
+    border-bottom: 1px solid #5b5a5a !important;
 
 }
 
